--- a/education.css
+++ b/education.css
@@ -4,17 +4,18 @@ padding:0px;
 }
 
 body{
-	background-color: skyblue;
+	background-color:  #ebebe0;
 }
 
 main{
 	margin: 10% 20% 20% 20%;
 	width: 60%;
-	background-color: grey;
+	background-color: #1a1a00;
 }
 
 main > header{
 	margin: 10%;
+	margin-top: 0%;
 	height: 20%;
 	padding-top: 4%;
     padding-bottom: 4%;
@@ -28,13 +29,37 @@ main > header{
 
 main > footer{
 	display: flex-column;
+	color: white;
 	align-items: center;
 	justify-content: space-around;
 	height: 10%;
 	padding-left: 40%;
 	padding-right: 40%;
+	border:1px solid white;
 }
 
 .school,.college{
-	margin: 10%;
+	margin-left: 10%;
+	margin-bottom: 2%;
+}
+
+i{
+	color: #4a148c;
+}
+
+div.Education{
+	padding: 2%;
+	background-color:green;
+}
+
+.school h4,.college h4{
+	color:  #a6ff4d;
+}
+
+i{
+	color: white;
+}
+
+.ye{
+	color: white;
 }
