--- a/experience.css
+++ b/experience.css
@@ -4,17 +4,18 @@ padding:0px;
 }
 
 body{
-	background-color: skyblue;
+	background-color:  #ebebe0;
 }
 
 main{
 	margin: 10% 20% 20% 20%;
 	width: 60%;
-	background-color: grey;
+	background-color: #1a1a00;
 }
 
 main > header{
 	margin: 10%;
+	margin-top: 0%;
 	height: 20%;
 	padding-top: 4%;
     padding-bottom: 4%;
@@ -33,11 +34,28 @@ main > footer{
 	height: 10%;
 	padding-left: 40%;
 	padding-right: 40%;
+    border:1px solid white;
+    color: white;
 }
 
 .experience{
 	margin: 10%;
+	color:  #a6ff4d
+;
 }
 .experience ul{
 	margin-left: 5%;
+}
+div.Experience{
+	padding: 2%;
+	background-color:green;
+}
+
+i{
+	color: white;
+}
+
+.ye{
+	color: white;
+	font-size: 16px;
 }
