--- a/index.css
+++ b/index.css
@@ -4,18 +4,18 @@ padding:0px;
 }
 
 body{
-	background-color: skyblue;
+	background-color:  #ebebe0;
 }
 
 main{
 	margin: 10% 20% 20% 20%;
 	width: 60%;
-	background-color: grey;
+	background-color: #1a1a00;
 }
 
 main > header{
 	margin: 10%;
-	margin-top: 0;
+	margin-top: 0%;
 	height: 20%;
 	padding-top: 4%;
     padding-bottom: 4%;
@@ -27,12 +27,14 @@ main > header{
 }
 
 main > footer{
+	border-top: 1px solid white;
 	display: flex-column;
 	align-items: center;
 	justify-content: space-around;
-	height: 10%;
+	height: 16%;
 	padding-left: 40%;
 	padding-right: 40%;
+	color: white;
 }
 img{
 	border-radius: 50%;
@@ -45,12 +47,16 @@ main > div.image{
 	margin-top:4%; 
 text-align: center;
 font-size: 24px;
+color: #a6ff4d
+;
 }
 
 .born{
 margin-top:2%; 
 text-align: center;
 font-size: 24px;
+color:  #a6ff4d
+;
 
 }
 
@@ -70,4 +76,32 @@ font-size: 24px;
 div.profile{
 	padding: 2%;
 	background-color:green;
+}
+
+a{
+	text-decoration-style: none;
+}
+
+.experience{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 4%;
+	margin-left: 16%;
+	margin-right: 10%;
+}
+
+.count{
+color: white;
+font-size: 32px;
+}
+.num{
+color:  #a6ff4d;
+font-size: 32px;
+}
+i{
+	color: white;
+}
+
+.ye{
+	color: white;
 }
