--- a/skills.css
+++ b/skills.css
@@ -4,17 +4,19 @@ padding:0px;
 }
 
 body{
-	background-color: skyblue;
+	background-color: #ebebe0
+;
 }
 
 main{
 	margin: 10% 20% 20% 20%;
 	width: 60%;
-	background-color: grey;
+	background-color: #1a1a00;
 }
 
 main > header{
-	margin: 10%;
+	margin: 0% 10% 10% 10%;
+	margin-top: 0%;
 	height: 20%;
 	padding-top: 4%;
     padding-bottom: 4%;
@@ -33,10 +35,34 @@ main > footer{
 	height: 10%;
 	padding-left: 40%;
 	padding-right: 40%;
+	color: white;
+	border-top: 1px solid white;
+}
+
+.userdetails{
+	margin: 4%;
+	margin-top: 0%;
+	font-size: 24px;
+	color: white;
+}
+li{
+	margin-left: 4%;
+	padding-top: 0%;
+	font-size: 24px;
+	color: #a6ff4d;
+	list-style-type: none;
+}
+
+div.Skills{
+	padding: 2%;
+	background-color:green;
 }
 
 
-.userdetails{
-	margin: 10%;
-	font-size: 24px;
+i{
+	color: white;
+}
+
+.ye{
+	color: white;
 }
