--- a/experience.css
+++ b/experience.css
@@ -14,7 +14,7 @@ main{
 }
 
 main > header{
-	margin: 10%;
+	margin: 8%;
 	margin-top: 0%;
 	height: 20%;
 	padding-top: 4%;
@@ -23,7 +23,7 @@ main > header{
 	padding-right: 20%;
 
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	box-sizing: border-box;
 }
 
