--- a/index.css
+++ b/index.css
@@ -14,15 +14,15 @@ main{
 }
 
 main > header{
-	margin: 10%;
+	margin: 8%;
 	margin-top: 0%;
 	height: 20%;
 	padding-top: 4%;
     padding-bottom: 4%;
-	padding-left: 20%;
-	padding-right: 20%;
+	padding-left: 10%;
+	padding-right: 10%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	box-sizing: border-box;
 }
 
@@ -38,6 +38,8 @@ main > footer{
 }
 img{
 	border-radius: 50%;
+	height: 20%;
+	width:20%;
 }
 main > div.image{
 	text-align: center;
