--- a/skills.css
+++ b/skills.css
@@ -15,8 +15,7 @@ main{
 }
 
 main > header{
-	margin: 0% 10% 10% 10%;
-	margin-top: 0%;
+	margin: 8%;
 	height: 20%;
 	padding-top: 4%;
     padding-bottom: 4%;
@@ -24,7 +23,7 @@ main > header{
 	padding-right: 20%;
 
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	box-sizing: border-box;
 }
 
